--- a/DS_Questions/Data_Structures/Linked_Lists/Loop/Linked-list-cycle.adoc
+++ b/DS_Questions/Data_Structures/Linked_Lists/Loop/Linked-list-cycle.adoc
@@ -1,7 +1,7 @@
 :toc:
 :toclevels: 6
 
-== link:https://leetcode.com/problems/linked-list-cycle/description/[Linked List Cycle]
+== link:https://leetcode.com/problems/linked-list-cycle/description/[141. Linked List Cycle]
 Given head, the head of a linked list, determine if the linked list has a cycle in it.
 
 There is a cycle in a linked list if there is some node in the list that can be reached again by continuously following the next pointer. Internally, pos is used to denote the index of the node that tail's next pointer is connected to. Note that pos is not passed as a parameter.
@@ -9,6 +9,7 @@ There is a cycle in a linked list if there is some node in the list that can be 
 Return true if there is a cycle in the linked list. Otherwise, return false.
 
 === link:https://amitkumar50.github.io/DS_Questions/Data_Structures/Linked_List/Compared_c++_rust_python_go.html[Linked List compared C++,Python,Go,Rust,C]
+
 === Approach-1. Fast, Slow pointer. O(1)
 ==== Logic
 Take 2 pointers, 1 fast(jumps 2 nodes at 1 time), 1 slow(jumps 1 node at a time)
